--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
   <div class="collapse navbar-collapse" id="collapse_target">
   	  <ul class="navbar-nav" style="float:left;">
       <li class="nav-item dropdown active">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">Home <span class="caret"></span></a>
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="index.html">Home <span class="caret"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">album</a>
+        <a class="nav-link" href="album.html">album</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Gallery</a>
+        <a class="nav-link" href="gallery.html">Gallery</a>
       </li>
     </ul>
-  	<a class="navbar-brand mx-auto" href="#" style="padding-right: 220px;">Red Velvet</a>
+  	<a class="navbar-brand mx-auto" href="index.html" style="padding-right: 220px;">Red Velvet</a>
   	
   </div>
 </nav>
