--- a/album.html
+++ b/album.html
@@ -63,7 +63,7 @@
 <main role="main" class="container">
 -->
 <div align="center">
-	<section class="main_container" >
+	<section class="album_container" >
 		<div class="jumbotron">
 			<div class="row">
 				<div class="col-sm-9">
