--- a/album.html
+++ b/album.html
@@ -44,8 +44,8 @@
 
   <div class="collapse navbar-collapse" id="collapse_target">
   	  <ul class="navbar-nav" style="float:left;">
-      <li class="nav-item dropdown active">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="index.html">Home <span class="caret"></span></a>
+      <li class="nav-item active">
+        <a class="nav-link href="index.html">Home <span class="caret"></span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="album.html">album</a>
@@ -54,7 +54,7 @@
         <a class="nav-link" href="gallery.html">Gallery</a>
       </li>
     </ul>
-  	<a class="navbar-brand mx-auto" href="#" style="padding-right: 220px;">Red Velvet</a>
+  	<a class="navbar-brand mx-auto" href="index.html" style="padding-right: 220px;">Red Velvet</a>
   	
   </div>
 </nav>
