--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="collapse navbar-collapse" id="collapse_target">
   	  <ul class="navbar-nav" style="float:left;">
       <li class="nav-item dropdown active">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="index.html">Home <span class="caret"></span></a>
+	<a class="nav-link href="index.html">Home</a>      
       </li>
       <li class="nav-item">
         <a class="nav-link" href="album.html">album</a>
