--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div class="collapse navbar-collapse" id="collapse_target">
   	  <ul class="navbar-nav" style="float:left;">
-      <li class="nav-item dropdown active">
+      <li class="nav-item active">
 	<a class="nav-link href="index.html">Home</a>      
       </li>
       <li class="nav-item">
