--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
   <div class="collapse navbar-collapse" id="collapse_target">
   	  <ul class="navbar-nav" style="float:left;">
       <li class="nav-item">
-        <a class="nav-link href="index.html">Home <span class="caret"></span></a>
+        <a class="nav-link" href="index.html">Home <span class="caret"></span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="album.html">album</a>
