--- a/album.html
+++ b/album.html
@@ -68,8 +68,8 @@
 			<div class="row">
 				<div class="col-sm-9">
 					<div class="subcontainer">
-						<h1 >Red Velvet Fan Site </h1>
-						<p>Red Red Velvet (레드벨벳) is a South Korean girl group formed by SM Entertainment. The group debuted on August 1, 2014, with the digital single "Happiness" and four group members: Irene, Seulgi, Wendy and Joy. In March 2015, Yeri was added into the group. </p>
+						<h1 >Red Velvet Bad Boy </h1>
+						<p>"Bad Boy" is a song by South Korean girl group Red Velvet, released as a single from The Perfect Red Velvet, the reissue of Perfect Velvet (2017). It was released by S.M. Entertainment on January 29, 2018, along with the album and an accompanying music video. Written by S.M. Entertainment artist and songwriter Yoo Young-jin and produced by The Stereotypes, Maxx Song and Whitney Philips, "Bad Boy" is primarily an R&B song with elements of hip hop that has a synth melody and heavy bass sound. Its lyrics describe a relationship between the titular "bad boy" and a cold woman.  </p>
 					</div>
 				</div>	
 				<div class="col-sm-3">
