--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
    
 
 <div align="center" style="width:100%;">
-
+<form>
 <div class="input-group" style="width:50%;"  >
   <div class="input-group-prepend">
     <span class="input-group-text" style="width:120px;" >
@@ -114,6 +114,7 @@
 <div class="button-pad">
 <button class="btn btn-light" type="button" id="inputGroupFileAddon04" style="width:25%;">Submit</button>
 </div>
+</form>
 </div>
 <!--
 </main>
