--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         }
       }
     </style>
-
+    <script type="text/javascript">
+	    alert("Thank You For your Subscription");
+    </script>
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
