--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       }
     </style>
     <script type="text/javascript">
+	    function poptext()
+	    {
 	    alert("Thank You For your Subscription");
+	    };
+	    
     </script>
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
@@ -96,7 +100,7 @@
    
 
 <div align="center" style="width:100%;">
-<form>
+<form action="javascript:poptext()">
 <div class="input-group" style="width:50%;"  >
   <div class="input-group-prepend">
     <span class="input-group-text" style="width:120px;" >
