--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </div>
 <br>
 <div class="button-pad">
-<button class="btn btn-light" type="button" id="inputGroupFileAddon04" style="width:25%;">Submit</button>
+<button class="btn btn-light" type="submit" id="inputGroupFileAddon04" style="width:25%;">Submit</button>
 </div>
 </form>
 </div>
