--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+	  
     <meta name="google-site-verification" content="YIhe2y07lEuM7LHEy9_ozBnt1Rn1W6RcHoTLoxJ5lZc" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -40,6 +41,16 @@
 	    };
 	    
     </script>
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144188620-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144188620-1');
+</script>
+
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
