--- a/album.html
+++ b/album.html
@@ -31,7 +31,14 @@
         }
       }
     </style>
-
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144188620-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-144188620-1');
+</script>
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
   </head>
